fix break on shop on mobile display

--- a/staticfiles/styles.css
+++ b/staticfiles/styles.css
@@ -3177,7 +3177,7 @@ footer {
 	}
 
 	.commission-intro-paragraph {
-		top:3%;
+		top: 3%;
 		right: 4%;
 		margin: 0;
 	}
@@ -3194,7 +3194,8 @@ footer {
 		background-image: url(/static/images/pony-commission.jpg);
 	  background-size: 181%;
 	  background-position: right;
-
+	}
+	
 	.alert {
 		font-size: 1rem;
 	}
@@ -3209,7 +3210,7 @@ footer {
   	align-items: center;
   }
 
-   .shop-item > a {
+  .shop-item > a {
   	width: 100%;
   	flex-direction: column;
   	align-items: center;
@@ -3914,7 +3915,7 @@ footer {
   	font-size: 2rem;
   }
 
-   .category-display > div > h2 {
+  .category-display > div > h2 {
   	padding: 0.5rem;
   }
 
@@ -3956,8 +3957,8 @@ footer {
   
 
   .checkout-header > div > h1 {
-        font-size: 2rem;
-    }
+    font-size: 2rem;
+  }
 
 	.checkout-main > .order-display {
 		width: 100%;
@@ -4168,6 +4169,5 @@ footer {
 	  background-size: 230%;
 	  background-position: top;
   }
-
 }
 
